# choir

./: .coverage  .coveragerc  Dockerfile  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  reset_data.sh  reset_db.sh
.github/workflows/: publish-docker-on-tag.yml
authentication/: urls.py  views.py
authentication/management/commands/: create_default_admin.py
authentication/templates/authentication/: login.html
authentication/tests/: factories.py
choir/events/: __init__.py  admin.py  apps.py  constants.py  forms.py  models.py  urls.py  utils.py  views.py
choir/events/fixtures/: events_dev.json  events_test.json
choir/events/migrations/: 0001_initial.py  0002_auto__add_field_eventsong_note.py
choir/events/tests/: __init__.py  factories.py  test_admin.py  test_models.py  utils.py  web.py
choir/member/: admin.py  autocomplete_light_registry.py  forms.py  models.py  urls.py  views.py
choir/player/: urls.py  views.py
choir/recording/: admin.py  forms.py  models.py  widgets.py
choir/repertory/: __init__.py  admin.py  apps.py  autocomplete_light_registry.py  constants.py  forms.py  models.py  translate_chords.py  urls.py  utils.py  views.py
choir/web/: admin.py  models.py  urls.py
docker/: Caddyfile  coverage.sh  entrypoint.sh  nginx.conf  uwsgi.ini
requirements/: common.txt  docker.txt  test.txt  test.txt.py
s3storage/: backends.py
s3storage/tests/: test_backends.py
settings/: asgi.py  common.py  default.py  docker.py  test.py  test_common.py  urls.py  warn.py  wsgi.py
src/: .hgignore
(+75 files in other folders)
